<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red"
    tools:context="com.sabersoft.ribbit.LoginActivity" >
    
      <ProgressBar
          android:id="@+id/progressBar2"
          style="?android:attr/progressBarStyleLarge"
          android:layout_width="35dp"
          android:layout_height="35dp"
    		android:layout_marginLeft="270dp"
          android:layout_marginTop="430dp"
          android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
     />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="International Community School Mobile App"
        android:textColor="@color/light_orange"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="ICS Official"
        android:textColor="@color/light_orange"
        android:textSize="60sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#e1f5fe" >
        
        

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/username_hint" 
                android:ellipsize="start"
             android:gravity = "center"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" 
                android:ellipsize="start"
             android:gravity = "center"/>

        <EditText
            android:id="@+id/appCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/app_code"
            android:inputType="number" 
                android:ellipsize="start"
             android:gravity = "center"/>

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/light_orange"
        android:text="@string/login_button"
        android:textColor="@color/dark_red"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="@color/dark_red"
        android:text="@string/sign_up_text"
        android:textColor="@color/light_orange"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:background="@color/dark_red"
        android:text="@string/forgot_password"
        android:textColor="@color/light_orange"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>