<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sabersoft.ribbit.SignUpActivity" >
    
      <ProgressBar
          android:id="@+id/progressBar3"
          style="?android:attr/progressBarStyleLarge"
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:layout_centerHorizontal="true"
          android:layout_marginLeft="270dp"
          android:layout_marginTop="430dp"
          android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="#e1f5fe"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="First Name"
             android:ellipsize="start"
             android:gravity = "center"
            android:textAppearance="?android:attr/textAppearanceMedium" 
              />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="Last Name"
                android:ellipsize="start"
             android:gravity = "center"
             />

        <EditText
            android:id="@+id/emailField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signUpButton"
            android:layout_alignLeft="@+id/signUpButton"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/email_hint"
                android:ellipsize="start"
             android:gravity = "center"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordField1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/emailField1"
            android:layout_alignLeft="@+id/emailField1"
           android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/password_hint"
                android:ellipsize="start"
             android:gravity = "center"
            android:inputType="textPassword" />
        
         <EditText
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/emailField1"
            android:layout_alignLeft="@+id/emailField1"
           android:layout_marginTop="15dp"
            android:inputType="number" 
            android:ems="10"
            android:hint="Grade"
                android:ellipsize="start"
             android:gravity = "center"
           />
         
         <Button
             android:id="@+id/signUpButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout1"
             android:layout_centerHorizontal="true"

             android:layout_marginTop="15dp"
             android:background="@color/light_orange"
             android:text="@string/sign_up"
             android:textColor="@color/dark_red" />
       
    </LinearLayout>

    



</RelativeLayout>
